# erp-supplier-onboarding

./: .gitignore  .gitleaks.toml  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
aidlc-docs/: AI-DLC-usage-guide.md  aidlc-state.md  audit.md
aidlc-docs/proposal/: demo-script.md  proposal.md
config/: atp-cloud.env.example  bruno-cli-package.json
config/nginx/: nginx.conf
database/bootstrap/: 000_create_principals.sql
database/migrations/: 000_bootstrap_schema.sql  001_create_reference_tables.sql  001_create_tables.sql  002_constraints_and_indexes.sql  002_create_request_workflow_tables.sql  003_create_analysis_tables.sql  004_create_integration_reference_tables.sql  005_add_constraints.sql  006_add_indexes.sql  (+2 more)
mockups/: supplier-onboarding-wireframes.html
postman/: erp-local.postman_environment.template.json  erp-supplier-onboarding.postman_collection.json
scripts/: bootstrap-local.sh  bruno.sh  cache_oracle_pdb.sh  capture_image_metadata.py  cloud_atp_preflight.py  copy-wallet.sh  generate-local-env.sh  generate_bruno.js  generate_demo_access.py  generate_postman.py  generate_postman_environment.py  generate_secrets.py  harden_ords.py  health.py  local_tls.py  logs.sh  migrate.py  performance.py  preflight.py  qa.py  qa.sh  query.py  query_guard.py  report.py  reset-local.sh  run_all_tests.sh  run_migrations.py  runtime.py  seed.py  sqlcl.sh  sqlcl_smoke.py  start.sh  stop.sh  test.sh  trust.py  verify.py  verify_schema.py  verify_schema_source.py  wait_for_ords.py
tests/: __init__.py  conftest.py
(+227 files in other folders)
